# Blackstar_Engine

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker_compose.yaml  docker_compose_qa.yaml.txt  main.py  manage_session_stuff.txt  old_ids_doc.json  old_promotion_system.txt  pyproject.toml  requirements.txt
cogs/: TTS.py  applications.py  birthdays.py  department_request.py  economy.py  enlistment_request.py  general.py  help.py  leaderboard.py  loa.py  manage_commands.py  moderation.py  permissions.py  points.py  profile.py  promotion.py  reaction_roles.py  roa.py  role_user.py  scc.py  sessions.py  stats.py
cogs/auto_reply/: auto_reply.py
cogs/developer/: data_export.py  data_import.py  dev_tools.py  jishaku.py  testing.py
cogs/events/: enlistment_by_thread.py  errors.py  guild.py  loa_event.py  messaging.py  on_command_error.py  on_guild_join.py  on_message.py  on_thread_create.py  on_voice_state_update.py  tasks.py  voice.py
cogs/loa/: loa.py  loa_event.py
cogs/manage_commands/: manage_commands.py
cogs/other/: general.py  points.py  promotion.py
cogs/profile/: profile.py
cogs/reaction_roles/: reaction_roles.py
cogs/reminder/: reminder.py
cogs/session/: sessions.py
ui/: AcceptDenyButtons.py  CustomButton.py  CustomModal.py  CustomSelects.py  PointsRemoval.py  ReasonModal.py  paginator.py
ui/applications/: ApplicationSelection.py
ui/economy/: blackjack.py  minesweeper.py  slots.py
ui/help/: Pages.py
ui/leaderboard/: ScrollButtons.py
utils/: constants.py  custom_errors.py  google.py  utils.py
(+60 files in other folders)
