[project]
name = "blackstar-engine-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cogwatch>=3.3.1",
    "discord>=2.3.2",
    "discord-py>=2.6.4",
    "jishaku>=2.6.3",
    "motor>=3.7.1",
    "python-dotenv>=1.2.1",
    "rich>=14.3.1",
    "six>=1.17.0",
]
